# tides-server/swagger/swagger.yml
@@ -1933,6 +1933,242 @@ paths:
                   type: string
         401:
           description: 'Unauthorized'
+  /org:
+    get:
+      operationId: 'listOrg'
+      description: 'list Org'
+      tags:
+        - 'org'
+      produces:
+        - 'application/json'
+      responses:
+        200:
+          description: 'OK'
+          schema:
+            type: array
+            items:
+              type: object
+              properties:
+                id:
+                  type: integer
+                name:
+                  type: string
+                totalCPU:
+                  type: number
+                totalRAM:
+                  type: number
+                totalDisk:
+                  type: number
+                CPUPercent:
+                  type: number
+                RAMPercent:
+                  type: number
+        401:
+          description: 'Unauthorized'
+        403:
+          description: 'Forbidden'
+    post:
+      operationId: 'addOrg'
+      description: 'add Org'
+      tags:
+        - 'org'
+      produces:
+        - 'application/json'
+      parameters:
+        - in: body
+          name: reqBody
+          schema:
+            type: object
+            properties:
+              name:
+                type: string
+      responses:
+        200:
+          description: 'create success'
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
+        401:
+          description: 'Unauthorized'
+        403:
+          description: 'Forbidden'
+  /org/{id}:
+    delete:
+      operationId: 'delete Org'
+      description: 'delete Org'
+      tags:
+        - 'org'
+      produces:
+        - 'application/json'
+      parameters:
+        - type: integer
+          in: path
+          name: id
+          required: true
+      responses:
+        200:
+          description: 'deletion success'
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
+        401:
+          description: 'Unauthorized'
+        403:
+          description: 'Forbidden'
+        404:
+          description: 'resource not found'
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
+  /user:
+    get:
+      operationId: 'listUser'
+      description: 'list User'
+      tags:
+        - 'user'
+      produces:
+        - 'application/json'
+      responses:
+        200:
+          description: 'OK'
+          schema:
+            type: array
+            items:
+              type: object
+              properties:
+                id:
+                  type: integer
+                name:
+                  type: string
+                org:
+                  type: string
+                role:
+                  type: string
+                email:
+                  type: string
+                phone:
+                  type: string
+        401:
+          description: 'Unauthorized'
+        403:
+          description: 'Forbidden'
+    post:
+      operationId: 'addUser'
+      description: 'add User'
+      tags:
+        - 'user'
+      produces:
+        - 'application/json'
+      parameters:
+        - in: body
+          name: reqBody
+          schema:
+            type: object
+            properties:
+              name:
+                type: string
+              org:
+                type: string
+              role:
+                type: string
+              email:
+                type: string
+              phone:
+                type: string
+      responses:
+        200:
+          description: 'create success'
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
+        401:
+          description: 'Unauthorized'
+        403:
+          description: 'Forbidden'
+  /user/{id}:
+    delete:
+      operationId: 'delete User'
+      description: 'delete User'
+      tags:
+        - 'user'
+      produces:
+        - 'application/json'
+      parameters:
+        - type: integer
+          in: path
+          name: id
+          required: true
+      responses:
+        200:
+          description: 'deletion success'
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
+        401:
+          description: 'Unauthorized'
+        403:
+          description: 'Forbidden'
+        404:
+          description: 'resource not found'
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
+    put:
+      operationId: 'Modify User'
+      description: 'Modify User'
+      tags:
+        - 'user'
+      produces:
+        - 'application/json'
+      parameters:
+        - type: integer
+          in: path
+          name: id
+          required: true
+        - in: body
+          name: reqBody
+          schema:
+            type: object
+            properties:
+              org:
+                type: string
+              role:
+                type: string
+              email:
+                type: string
+              phone:
+                type: string
+      responses:
+        200:
+          description: 'deletion success'
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
+        401:
+          description: 'Unauthorized'
+        403:
+          description: 'Forbidden'
+        404:
+          description: 'resource not found'
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
 
 definitions:
   ResourceAddItem:
@@ -2031,3 +2267,5 @@ definitions:
         type: string
       name:
         type: string
+
+
